@@ -71,6 +71,8 @@ This is the eleventh beta release of the upcoming official 0.5.3b release.
   See MTSSensorInputFunction.java for more state values.
 - Updated library COM4J to version: com4j-20110322. This affects Innovate MTS
   and Tactrix Openport 2.0 support.
+- Added a button to un-select all selected parameters on all tabs.  Selections
+  can be restored by reloading the current profile or loading a different profile. 
 --- Editor ---
 - Set JInternalFrame.isPalette in TableFarme.java so table titles are visible on
   Mac OS.
